# safety

./: .clang-format  .gitignore  README.md
safe_strings/core/: safe_strings.c  safe_strings.h
safe_strings/examples/: CMakeLists.txt  full_example.c
safe_strings/tests/: CMakeLists.txt  safe_strings_test.c
sstring/core/: sstring.c  sstring.h
sstring/examples/: CMakeLists.txt  full-example.c
sstring/tests/: CMakeLists.txt  sstring-test.c
